new cart outlook

--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -30,49 +30,44 @@
 		Корзина
 	</div>
 
-	<div class="cartContent">
-
-        {% if cartProducts|length == 0 %}
-            <div class="text-left" style="margin-top:27px;">
-                <div class="contentSubtitle">Ваша корзина пуста.</div>
-                <div>
-                    <a href="/products/">Сделать заказы</a>
-                </div>
+    {% if cartProducts|length == 0 %}
+        <div class="text-left" style="margin-top:27px;">
+            <div class="contentSubtitle">Ваша корзина пуста.</div>
+            <div>
+                <a href="/products/">Сделать заказы</a>
             </div>
-        {% endif %}
+        </div>
+    {% endif %}
+
+	<div class="container-fluid cartContent">
 
 		{% for pr in cartProducts %}
             <div class="cartElement row">
-			    <div class="col-9 my-auto">
+			    <div class="col-10 my-auto">
                     <div class="row">
                         
                         <div class="col-md-4 my-auto">
                             <span class="contentSubtitle">{{pr.title}}</span>
                         </div>
-                        <div class="col-md-8 text-md-center my-auto">
+                        <div class="col-md-8 text-md-center my-auto cartElementPrice">
+                            {% comment %} TMP: {% endcomment %}
+                            <span class="contentSubSubTitle">
+                                Количество: <b>{{thisCart|get_by_index:pr.article}} шт.</b>
+                            </span>
 
-                            <span class="cartElementPrice">
+
+                            <span class="my-auto">
                                 <span class="productPrice">
-                                    <span>
-                                        {{pr|calc_price}}
-                                    </span>
-                                    <span class="discount">
-                                        {% if not pr.discount == 0 %}
-                                          (-{{pr.discount}}%)
-                                        {% endif %}
-                                    </span>
-                                    <span>
-                                        x <b>{{thisCart|get_by_index:pr.article}}</b> = 
-                                    </span>
                                     <b>
-                                        {{pr|calc_final_price:thisCart}}
+                                        {{pr|calc_final_price:thisCart}} ₽
                                     </b>
                                 </span>
                             </span>
                         </div>
                     </div>
                 </div>
-                <div class="col-3 my-auto">
+                <div class="col-2 my-auto">
+
                     <div class="text-right">
                         <a href="/cart/remove/?article={{pr.article}}">
                             <img src="http://demidob.site/dch/imgs/icons/x.png" class="removeCartElementIcon" alt="x" width="50" height="50">
