--- a/src/static/styles/cart.css
+++ b/src/static/styles/cart.css
@@ -1,6 +1,6 @@
 .cartElement {
 	border: 8px solid #708E6E;
-	padding:27px;
+	padding: 20px;
 
     margin-top: 27px;
 }
@@ -12,4 +12,13 @@
 .removeCartElementIcon:hover {
 	transform: rotate(90deg);
 	transition: 1s;
+}
+
+@media(min-width: 768px) {
+
+	.cartElementPrice {
+		/* margin-left: 10px; */
+		display: flex;
+		justify-content: space-between;
+	}
 }
