--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -79,7 +79,7 @@
 
         {% if cartProducts|length != 0 %}
             <div class="text-right contentSubtitle" style="margin-top: 27px;">
-                Итого: {{totalPrice}}
+                Итого: {{totalPrice}} ₽
             </div>
             <div class="text-right" style="margin-top: 27px;">
                 <button class="btn btn-success">Оформить заказ</button>
