--- a/src/templates/product_details.html
+++ b/src/templates/product_details.html
@@ -88,7 +88,7 @@
 	        </button>
 	      </div>
 	      <div class="modal-body">
-	        Успешно добавлено в корзину <span id="modalAmount">1</span> элемента
+	        Успешно добавлено в корзину <span id="modalAmount">1</span> шт.
 	      </div>
 	      <div class="modal-footer">
 	        <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
