--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -17,6 +17,7 @@
 {% block additional_styles %}
 	<link rel="stylesheet" href="{% static 'styles/product_block.css' %}">
 	<link rel="stylesheet" href="{% static 'styles/home_page.css' %}">
+	<link rel="stylesheet" href="{% static 'styles/form.css' %}">
 	<link rel="stylesheet" href="{% static 'styles/own_carousel.css' %}">
 {% endblock additional_styles %}
 
@@ -204,15 +205,15 @@
 				</div>
 			</div>
 				<div class="col-md-7">	
-					<div class="feedbackForm">		
+					<div class="dForm">		
 						<div class="text-center"><div class="contentSubtitle" style="border-bottom: 1px #707070 solid; display: inline-block; margin-bottom:26px;">Напишите нам</div></div>
 
 						<form action="/pf/" method="post" content="text/html; charset=UTF-8" accept-charset="UTF-8">
 			   				{% csrf_token %}
-			   				<div class="feedbackContent contentSubSubTitle"><label for="id_name">Имя:</label><input  class="feedbackInput"type="text" name="name" maxlength="50" required="" id="id_name"></div>
-							<div class="feedbackContent contentSubSubTitle"><label for="id_topic">Тема обращения:</label><input  class="feedbackInput"type="text" name="topic" maxlength="100" required="" id="id_topic"></div>
-							<div class="feedbackContent contentSubSubTitle"><label for="id_body">Тело:</label><textarea class="feedbackInput" name="body"  cols="20" rows="5" maxlength="250" required="" id="id_body" style="resize:none;"></textarea></div>
-							<div class="feedbackContent contentSubSubTitle"><label for="id_email">E-Mail:</label><input class="feedbackInput" type="email" name="email" required="" id="id_email"></div>
+			   				<div class="dFormContent contentSubSubTitle"><label for="id_name">Имя:</label><input  class="dFormInput"type="text" name="name" maxlength="50" required="" id="id_name"></div>
+							<div class="dFormContent contentSubSubTitle"><label for="id_topic">Тема обращения:</label><input  class="dFormInput"type="text" name="topic" maxlength="100" required="" id="id_topic"></div>
+							<div class="dFormContent contentSubSubTitle"><label for="id_body">Тело:</label><textarea class="dFormInput" name="body"  cols="20" rows="5" maxlength="250" required="" id="id_body" style="resize:none;"></textarea></div>
+							<div class="dFormContent contentSubSubTitle"><label for="id_email">E-Mail:</label><input class="dFormInput" type="email" name="email" required="" id="id_email"></div>
 			   				<div class="text-right "><input type="submit" class="btn btn-success" value="Отправить"></div>
 		  				</form>
 	  				</div>
