order functionality added

--- a/src/templates/make_order.html
+++ b/src/templates/make_order.html
@@ -84,7 +84,7 @@
 
 		</div>
 		<div class="col-lg-6">
-			<form action="" method="post">
+			<form action="/complete_order/" method="post">
 				<div class="dForm">
 					<div class="text-center"><div class="contentSubtitle" style="border-bottom: 1px #707070 solid; display: inline-block; margin-bottom:26px;">Контактные данные</div></div>
 
