--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -47,16 +47,16 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav mr-auto">
                         <li class="nav-item active">
-                            <a class="nav-link" href="/">Главная<span class="sr-only">(current)</span></a>
+                            <a class="nav-link headerNavLink" href="/">Главная<span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/products/">Товары</a>
+                            <a class="nav-link headerNavLink" href="/products/">Товары</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="/#contacts">Контакты</a>
+                            <a class="nav-link headerNavLink" href="/#contacts">Контакты</a>
                         </li>
                         <li class="nav-item active dropdown">
-                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <a class="nav-link headerNavLink dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Семена
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
@@ -67,7 +67,7 @@
                                 <a class="dropdown-item" href="#">О семенах</a>
                             </div>
                             <li class="nav-item active">
-                                <a class="nav-link" href="/cart/">Корзина</a>
+                                <a class="nav-link headerNavLink" href="/cart/">Корзина</a>
                             </li>
                         </li>
                     </ul>
