--- a/src/static/styles/main.css
+++ b/src/static/styles/main.css
@@ -156,7 +156,8 @@ header {
 .contentSubtitle {
     font-size: 35px;
     font-weight:bold;
-    color: #7CA0D3;
+    /*color: #7CA0D3;*/
+    color: #CC7654;
 }
 .contentSubSubTitle {
     font-size: 20px;
