--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -205,7 +205,7 @@
 
 		<div class="col-md-7">
 			<div class="contentSubtitle">Как добраться</div>
-			<div class="block_content text-right">
+			<div class="block_content block_border text-right">
 				<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/dachnik/1015190402/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Дачник</a><a href="https://yandex.ru/maps/192/vladimir/category/gardening_shop/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Магазин для садоводов во Владимире</a><a href="https://yandex.ru/maps/192/vladimir/category/seed_store/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин семян во Владимире</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQdn0eZKD" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 				</div>
 			</div>
@@ -216,7 +216,7 @@
 		<div class="row">
 			<div class="col-md-5">
 				<div class="contentSubtitle">
-					Обратная связь:
+					Обратная связь
 				</div>
 				<div class="contentSubSubTitle">
 					Тут вы можете задать вопрос или оставить отзыв
