--- a/src/templates/product_details.html
+++ b/src/templates/product_details.html
@@ -26,16 +26,16 @@
 				<div class="col-lg-7">
 					<div class="contentTitle">{{pr.title}}</div>
 					<div class="divTovar">
-						<span class="contentSubtitle category">Категория:</span> 
+						<span class="contentSubtitle category">Категория: </span> 
 						<span class="contentSubSubTitle">{{pr.category}}</span>
 					<div class="divDiscription">
-						<div class="contentSubtitle category">Описание:</div>
+						<div class="contentSubtitle category">Описание: </div>
 						<span class="contentSubSubTitle discription">{{pr.description}}</span>
 					</div>
 					</div>
 				</div>
 				<div class="col-lg-5 text-center">	
-					<div class="divProductIcon">
+					<div class="divProductIcon block_just_border">
 						<img src="{{pr.icon}}" class="productIcon" alt="">
 					</div>
 					<div class="underImg text-center">
