--- a/src/static/styles/product_details.css
+++ b/src/static/styles/product_details.css
@@ -9,7 +9,7 @@
 }
 .category {
     font-size:25px;
-     color:#657B66;
+     /*color:#657B66;*/
 }
 .divTovar {
     margin-top:37px;
@@ -19,15 +19,14 @@
     margin-top:20px;
 }
  .productIcon {
-    border: 5px solid #526858;
+    border-radius: 50%;
+    border: 6px solid #CC7654;
     width:100%;
-    
+}
 
-      
-    }
 .discount {
-    color:#9F2C2C;
-    font-size:25px;
+    /*color:#9F2C2C;*/
+    /*font-size:25px;*/
 }
 .productPrice {
       color: #526858;
