--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -172,41 +172,23 @@
 			</div>
 	</div>
 					
+	
+
 	<div class="page_block" id="contacts">
 		<div class="row">
-			<div class="col-md-5 text-center text-md-left my-auto">
-				<div class="contentSubtitle">
-					Контакты:
-				</div>
-			</div>
-			<div class="col-md-7 text-center">
-				<div class="contacts">
-					<hr>				
-					<div class="contentSubSubTitle">
-						Телефон: 44-51-62 
-						{% include "social_links.html" %}
-					</div>
-					<hr>
-				</div>
-			</div>
-		</div>
-		
-	</div>
+			<div class="col-md-7">
+				<div class="dForm">		
+					<div class="text-center"><div class="contentSubtitle" style="border-bottom: 1px #707070 solid; display: inline-block; margin-bottom:26px;">Контакты</div></div>
 
-	<div class="page_block text-center">
-
-		<div class="row">
+					<form action="" method="post" content="text/html; charset=UTF-8" accept-charset="UTF-8">
+		   				<div style="position:relative;overflow:hidden;border-radius: 23px;font-family: 'mainFont';"><a href="https://yandex.ru/maps/org/dachnik/1015190402/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Дачник</a><a href="https://yandex.ru/maps/192/vladimir/category/gardening_shop/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Магазин для садоводов во Владимире</a><a href="https://yandex.ru/maps/192/vladimir/category/seed_store/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин семян во Владимире</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQdn0eZKD" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
+	  				</form>
+  				</div>
+			</div>
 			
 			<div class="col-md-5 my-auto">
 				<div class="logo_vid_container">
 					<video src="https://demidob.000webhostapp.com/dch/vids/logo-w.mp4" autoplay loop muted playsinline class="logo_vid"></video>
-				</div>
-			</div>
-
-		<div class="col-md-7">
-			<div class="contentSubtitle">Как добраться</div>
-			<div class="block_content block_border text-right">
-				<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/org/dachnik/1015190402/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Дачник</a><a href="https://yandex.ru/maps/192/vladimir/category/gardening_shop/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:14px;">Магазин для садоводов во Владимире</a><a href="https://yandex.ru/maps/192/vladimir/category/seed_store/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:28px;">Магазин семян во Владимире</a><iframe src="https://yandex.ru/map-widget/v1/-/CCQdn0eZKD" width="100%" height="400" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
 				</div>
 			</div>
 		</div>
@@ -214,7 +196,7 @@
 
 	<div class="page_block">
 		<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-5">
 				<div class="contentSubtitle">
 					Обратная связь
 				</div>
@@ -222,21 +204,20 @@
 					Тут вы можете задать вопрос или оставить отзыв
 				</div>
 			</div>
-				<div class="col-md-6">	
-					<div class="dForm">		
-						<div class="text-center"><div class="contentSubtitle" style="border-bottom: 1px #707070 solid; display: inline-block; margin-bottom:26px;">Напишите нам</div></div>
+			<div class="col-md-7">	
+				<div class="dForm">		
+					<div class="text-center"><div class="contentSubtitle" style="border-bottom: 1px #707070 solid; display: inline-block; margin-bottom:26px;">Напишите нам</div></div>
 
-						<form action="/pf/" method="post" content="text/html; charset=UTF-8" accept-charset="UTF-8">
-			   				{% csrf_token %}
-			   				<div class="dFormContent contentSubSubTitle"><label for="id_name">Имя:</label><input  class="dFormInput"type="text" name="name" maxlength="50" required="" id="id_name"></div>
-							<div class="dFormContent contentSubSubTitle"><label for="id_topic">Тема обращения:</label><input  class="dFormInput"type="text" name="topic" maxlength="100" required="" id="id_topic"></div>
-							<div class="dFormContent contentSubSubTitle"><label for="id_body">Тело:</label><textarea class="dFormInput" name="body"  cols="20" rows="5" maxlength="250" required="" id="id_body" style="resize:none;"></textarea></div>
-							<div class="dFormContent contentSubSubTitle"><label for="id_email">E-Mail:</label><input class="dFormInput" type="email" name="email" required="" id="id_email"></div>
-			   				<div class="text-right "><input type="submit" class="btn btn-success" value="Отправить"></div>
-		  				</form>
-	  				</div>
+					<form action="/pf/" method="post" content="text/html; charset=UTF-8" accept-charset="UTF-8">
+		   				{% csrf_token %}
+		   				<div class="dFormContent contentSubSubTitle"><label for="id_name">Имя:</label><input  class="dFormInput"type="text" name="name" maxlength="50" required="" id="id_name"></div>
+						<div class="dFormContent contentSubSubTitle"><label for="id_topic">Тема обращения:</label><input  class="dFormInput"type="text" name="topic" maxlength="100" required="" id="id_topic"></div>
+						<div class="dFormContent contentSubSubTitle"><label for="id_body">Тело:</label><textarea class="dFormInput" name="body"  cols="20" rows="5" maxlength="250" required="" id="id_body" style="resize:none;"></textarea></div>
+						<div class="dFormContent contentSubSubTitle"><label for="id_email">E-Mail:</label><input class="dFormInput" type="email" name="email" required="" id="id_email"></div>
+		   				<div class="text-right "><input type="submit" class="btn btn-success" value="Отправить"></div>
+	  				</form>
   				</div>
-
+			</div>
   		</div>
 	</div>
 
