--- a/src/templates/cart.html
+++ b/src/templates/cart.html
@@ -83,7 +83,7 @@
                 Итого: {{totalPrice}} ₽
             </div>
             <div class="text-right" style="margin-top: 27px;">
-                <a href="/order/" class="btn btn-success">Оформить заказ</a>
+                <a href="/order/" class="btn">Оформить заказ</a>
             </div>
         {% endif %}		
 
