--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -214,7 +214,7 @@
 						<div class="dFormContent contentSubSubTitle"><label for="id_topic">Тема обращения:</label><input  class="dFormInput"type="text" name="topic" maxlength="100" required="" id="id_topic"></div>
 						<div class="dFormContent contentSubSubTitle"><label for="id_body">Тело:</label><textarea class="dFormInput" name="body"  cols="20" rows="5" maxlength="250" required="" id="id_body" style="resize:none;"></textarea></div>
 						<div class="dFormContent contentSubSubTitle"><label for="id_email">E-Mail:</label><input class="dFormInput" type="email" name="email" required="" id="id_email"></div>
-		   				<div class="text-right "><input type="submit" class="btn btn-success" value="Отправить"></div>
+		   				<div class="text-right "><input type="submit" class="btn" value="Отправить"></div>
 	  				</form>
   				</div>
 			</div>
