--- a/src/templates/make_order.html
+++ b/src/templates/make_order.html
@@ -110,7 +110,7 @@
 						<textarea class="dFormInput" cols="20" rows="5" name="comment" cols="40" rows="10" maxlength="500" required="" id="id_comment"></textarea>
 					</div>
 				</div>
-				<div class="text-right make_order_button"><input type="submit" class="btn btn-success" value="Оформить заказ"></div>
+				<div class="text-right make_order_button"><input type="submit" class="btn" value="Оформить заказ"></div>
 			</form>
 		</div>
 	</div>
